encabezado mejorado y header agredado

--- a/estilos.css
+++ b/estilos.css
@@ -43,3 +43,14 @@ display: flex;
 .nav-main ul li{
     padding: 10px;
 }
+.nav-main ul li a:hover{
+border-bottom: 2px solid #ffffff;
+}
+.nav-main ul li a{
+    padding: 5px;
+}
+.nav-main ul.nav-menu{
+    flex: 1;
+    margin-left: 20px;
+
+}
